--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<label for="cambio">
 			Tipo de Cambio:
 		</label>
-		<input type="text" name="cambio" id="cambio"><br>
+		<input type="number" name="cambio" id="cambio"><br>
 		<label for="soles">
 			Monto Soles:
 		</label>
-		<input type="text" name="soles" id="soles"><br>
+		<input type="number" name="soles" id="soles"><br>
 		<button type="button" id="calcular">Tu cambio es:</button>
 	</form>
 	<div id="resultado"></div>
